[package]
name = "solana_rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "solana_rpc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "solana_rpc_bin"
path = "src/main.rs"

[dependencies]
solana-client = "1.10.12"
solana-sdk = "1.10.12"
solana-program = "1.10.25"
solana-transaction-status = "1.10.24"
serde_json = "1.0.81"
serde = "1.0.137"
spl-token = "3.3.0"
thiserror = "1.0.31"
chrono = "0.4.19"
borsh = "0.9.3"
bincode = "1.3.3"
base58 = "0.2.0"
bs58 = "0.4.0"
pyo3 = { version = "0.16.3", features = ["extension-module"] }